# Module-Registrar

./: .env  .env.example  .gitignore  base_weights.json  install_modules.sh  pyproject.toml  requirements.txt  run_validator.sh  setup.cfg  setup.sh  setup_validator.sh  udo crontab -l  voting_sync.py
api/: api.py  data_models.py
api/routes/: modules.py  subnet_routes.py
api/utilites/: local_files.py
eden_bittensor_subnet/: registrar.py
eden_bittensor_subnet/modules/: base_module.py  inference_types.json
eden_bittensor_subnet/neurons/: module_miner.py
eden_bittensor_subnet/utilities/: time_to_live_cache.py  uids.py  update_repository.py
eden_gateway/: api.py  gateway.py  weight_manager.py
eden_subnet/: registrar.py
eden_subnet/api/: api.py  data_models.py
eden_subnet/keys/: ss58key.py
eden_subnet/modules/: base_module.py  inference_types.json
eden_subnet/neurons/: module_miner.py
eden_subnet/utilities/: update_repository.py
miner/: .env.example  .gitignore  base_miner.py  data_models.py  encryption.py  module_manager.py  testing.py
miner/base/: api.py  base_miner.py  base_module.py  data_models.py  file.html
miner/modules/: setup_miners.sh
module_registrar/: __init__.py  data_models.py  module_registrar.py
module_registrar/api/: api.py  data_models.py
module_registrar/base/: base_miner.py  base_module.py
module_registrar/modules/: base_module.py
module_registrar/neurons/: module_miner.py
module_registrar/tests/: test_registrar.py
module_registrar/utilities/: audio_manager.py  encryption.py  update_repository.py
modules/1/: setup_1.py
modules/embedding/: setup_embedding.py
modules/financial_news/: setup_financial_news.py
modules/public_key/: setup_public_key.py
modules/transcription/: setup_transcription.py
modules/translation/: setup_translation.py
modules/whisper/: setup_whisper.py
templates/: main.html
tests/: test_gateway.py  test_registrar.py  test_weight_manager.py
tests/module_registrar/: test_module_registrar.py
validator/: .gitignore  data_models.py  validator.py
(+55 files in other folders)
