[tool.poetry]
name = "eden_subnet"
version = "0.1.0"
description = ""
authors = ["Richard <bakobiibizo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
communex = "^0.1.32"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
jsonpickle = "^3.2.2"
scipy = "^1.14.0"
tiktoken = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
pylint = "^3.2.4"
pytest = "^8.2.2"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
