[tool.poetry]
name = "module_registrar"
version = "0.1.0"
description = ""
authors = ["Richard <bakobiibizo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
communex = "^0.1.32"
torch = "^2.2.0"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
jsonpickle = "^2.2.0"
scipy = "^1.14.0"
tiktoken = "^0.7.0"
seamless = "^0.1.0"
cryptography = "^42.0.8"
eth-account = "^0.13.0"
bitcoinlib = "^0.6.15"
solders = "^0.21.0"
jinja2 = "^3.1.4"
requests = "^2.32.3"
safe-pysha3 = "^1.0.4"
pycryptodome = "^3.20.0"
mnemonic = "^0.21"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
pylint = "^3.2.4"
pytest = "^8.2.2"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
